@@ -13,6 +13,13 @@ Core and Builtins
 Library
 -------
 
+Build
+-----
+
+- Issue #1303434: Generate ZIP file containing all PDBs (already done for rc1).
+
+- Stop packaging versioncheck tool (already done for rc1).
+
 
 What's New in Python 3.1.3 release candidate 1?
 ===============================================
